# nunu

./: .gitignore  Package.swift  README.md  electron-builder.json  electron-builder.yml  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
Sources/nunu/: AppState.swift  Extensions.swift  NunuApp.swift
Sources/nunu/Models/: AndroidUpdate.swift  Game.swift
Sources/nunu/Services/: InstallationService.swift  PatchService.swift  UpdateService.swift
Sources/nunu/Views/: GameLibraryView.swift  GoogleSignInView.swift  MainLauncherView.swift  OnboardingView.swift  SettingsView.swift  SidebarView.swift
assets/: icon.icns
electron/: main.ts  preload.ts
electron/services/: GAppsRootService.ts  GAppsService.ts  GoogleAuthService.ts  InstallationService.ts  KernelDownloadService.ts  KernelSUService.ts  MagiskService.ts  NunuAppleEngineService.ts  PatchService.ts  SafetyNetService.ts  UpdateService.ts
native/avm/: CMakeLists.txt  LICENSE  README.md  avm.entitlements
native/avm/core/: CMakeLists.txt  android_version.cpp  config.cpp  fps_limiter.cpp  gapps.cpp  image_manager.cpp  profile.cpp  vm_manager.cpp
native/avm/core/hypervisor/: hypervisor_detect.cpp  hypervisor_hvf.mm
native/avm/gpu/: CMakeLists.txt  frame_presenter.cpp  gfxstream_bridge.cpp  opengl_renderer.cpp  vulkan_renderer.cpp
native/avm/include/avm/core/: android_version.h  config.h  fps_limiter.h  gapps.h  hypervisor_hvf.h  image_manager.h  platform.h  profile.h  vm_manager.h
native/avm/include/avm/gpu/: frame_presenter.h  gfxstream_bridge.h  gpu_renderer.h
native/avm/include/avm/input/: adb_injector.h  gamepad_bridge.h  input_bridge.h  keymapper.h  virtio_input.h
native/avm/include/avm/overlay/: fps_overlay.h  keymapper_editor.h
native/avm/input/: CMakeLists.txt  adb_injector.cpp  gamepad_bridge_sdl.cpp  input_bridge_adb.cpp  input_bridge_sdl.cpp  virtio_input.cpp
native/avm/input/keymapper/: keymapper.cpp
native/avm/overlay/: CMakeLists.txt  fps_overlay.cpp  keymapper_editor.cpp  overlay.cpp
native/avm/src/: main.cpp
src/: App.tsx  index.css
src/components/: TitleBar.tsx
src/data/: games.ts
src/store/: appStore.ts
src/types/: electron.d.ts
src/views/Launcher/: Discover.tsx  GameCard.tsx  GameLibrary.tsx  MainLayout.tsx  MyGames.tsx  Sidebar.tsx
src/views/Onboarding/: CompleteStep.tsx  DownloadStep.tsx  EngineStep.tsx  OnboardingFlow.tsx  SafetyNetStep.tsx  SignInStep.tsx  WelcomeStep.tsx
src/views/Settings/: Settings.tsx
